base/fastapi/fastapi-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: api-dev
spec:
  selector:
    app: fastapi-app
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  namespace: api-dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      containers:
      - name: fastapi-container
        image: docker.io/goegoe0212/fastapi-kubernetes
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        volumeMounts:
          - name: fastapi-data
            mountPath: /data
      restartPolicy: Always
      volumes:
        - name: fastapi-data
          persistentVolumeClaim:
            claimName: fastapi-nfs-pvc
---
