base/fastapi/fastapi-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: api-dev
spec:
  ingressClassName: apisix
  rules:
  - http:
      paths:
      - path: /dev
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 8000
---
